# automata-theory

Monkey/: CMakeLists.txt  example.txt  firstpopulation.txt  secondpopulation.txt
Monkey/include/: FirstPopulationParser.h  Lexer.h  Parser.h  SecondPopulationParser.h  Token.h
Monkey/src/: main.cpp
RecursiveDescent/: CMakeLists.txt  example.txt  grammar.txt  stresstest.txt
RecursiveDescent/include/: Token.h
RecursiveDescent/src/: main.cpp
determinizer/: README.md  go.mod
determinizer/cmd/: main.go
determinizer/pkg/determinizer/: determinizer.go
determinizer/pkg/model/: nfa.go
determinizer/pkg/parser/: digraphparser.go  grammarparser.go
determinizer/pkg/tests/: determinizer_test.go  grammar_test.go  utils.go
determinizer/pkg/writer/: writer.go
lexer/: CMakeLists.txt  source.txt
lexer/include/: Lexer.h  Token.h
lexer/src/: Lexer.cpp  main.cpp
mealymoore/: README.md  go.mod
mealymoore/cmd/: main.go
mealymoore/pkg/mealymoore/: converter.go  parser.go  writer.go
mealymoore/pkg/tests/: mealymoore_test.go
minimizer/: README.md  go.mod
minimizer/cmd/: main.go
minimizer/pkg/minimizer/: minimizer.go
minimizer/pkg/model/: dfa.go
minimizer/pkg/parser/: parser.go
minimizer/pkg/tests/: minimization_test.go
minimizer/pkg/writer/: writer.go
regex/: README.md  go.mod
regex/cmd/: main.go
regex/pkg/determinizer/: determinizer.go
regex/pkg/minimizer/: minimizer.go
regex/pkg/model/: consts.go  nfa.go  state.go
regex/pkg/postfix/: postfix.go
regex/pkg/regex/: regex.go
regex/pkg/tests/: regex_test.go
(+23 files in other folders)
